Fix dialog popup scrolling
When windows size is too small, unable to scroll on dialog popup
content.

Fix RM-50164

--- a/axelor-web/src/main/webapp/css/view.popup.css
+++ b/axelor-web/src/main/webapp/css/view.popup.css
@@ -225,7 +225,6 @@
 
 .ui-dialog-small .ui-dialog-content {
   height: auto !important;
-  overflow: inherit;
 }
 
 .ui-dialog-small .ui-dialog-buttonpane {
